--- a/styles/style.css
+++ b/styles/style.css
@@ -231,6 +231,83 @@
   font-size: 25px;
   color: #ffffff;
 }
+/* Facts section start  */
+.facts-title {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 45px;
+  color: #131313;
+  margin-bottom: 24px;
+}
+.facts-para {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  color: #727272;
+  margin-bottom: 70px;
+}
+.fact-cards {
+  display: flex;
+  gap: 70px;
+  justify-content: center;
+}
+.fact-card {
+  text-align: center;
+  border: 1px solid #ff900e;
+  border-radius: 8px;
+  width: 242px;
+  height: 242px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+.fact-card:hover {
+  background-color: var(--btn-color);
+  color: #ffffff;
+}
+.fact-card > h3 {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 45px;
+  color: #424242;
+}
+.fact-card > p {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  color: #727272;
+}
+/* Sponsor section start  */
+.sponsors {
+  text-align: center;
+}
+.sponsor-title {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 45px;
+  color: #131313;
+  margin-bottom: 24px;
+}
+.sponsor-para {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  color: #727272;
+  margin-bottom: 50px;
+}
+.sponsor-img > img {
+  margin-right: 70px;
+  cursor: pointer;
+}
 /*--------------------------------
         Main Section end 
 -----------------------------------*/
