--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@
   margin: 0 auto;
 }
 .margin-b {
-  margin-bottom: 70px;
+  margin-bottom: 10%;
 }
 /*--------------------------------
         Global Section end 
@@ -314,6 +314,19 @@
 /* ------------------------------
         Footer Section Start 
 ---------------------------------*/
+.footer {
+  background: #fff4e7;
+  border-radius: 8px;
+  padding: 45px;
+  text-align: center;
+}
+.footer > samp {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  color: #424242;
+}
 /*--------------------------------
         Footer Section end 
 -----------------------------------*/
