--- a/styles/style.css
+++ b/styles/style.css
@@ -392,9 +392,6 @@
 Media query section
 -----------------------------------*/
 @media only screen and (max-width: 688px) {
-  main {
-    display: none;
-  }
   .size {
     width: 90vw;
     margin: 0 auto;
@@ -413,5 +410,69 @@ Media query section
   }
   .hero-img > img {
     width: 90vw;
+  }
+  /* quick feature section  */
+  .quick-features {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .quick-img {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  /* feature-love section  */
+  .feature-love {
+    flex-direction: column;
+  }
+  .feature-love-img > img {
+    width: 90vw;
+  }
+  .love-btn {
+    display: none;
+  }
+  /* facts section  */
+  .fact-cards {
+    flex-direction: column;
+    align-items: center;
+  }
+  /* sponsor section  */
+  .sponsor-img {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .sponsor-img > img {
+    margin-right: 0;
+  }
+}
+@media only screen and (max-width: 992px) {
+  .size {
+    width: 80vw;
+  }
+  /* logo nav  */
+
+  /* Hero section  */
+  .hero-img > img {
+    width: 80vw;
+  }
+  /* quick feature section  */
+  .quick-features {
+    flex-direction: column;
+    gap: 20px;
+  }
+  /* feature-love section  */
+  .feature-love {
+    flex-direction: column;
+  }
+  .feature-love-img > img {
+    width: 90vw;
+  }
+  .love-btn {
+    display: none;
+  }
+  /* facts section  */
+  .fact-cards {
+    gap: 20px;
+    padding: 5px;
   }
 }
